# suicide-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: internal.rs  lib.rs
