[package]
name = "suicide-rs"
description = "A super simple crate for printing an error message when something terrible goes wrong and nothing can be done to recover."
repository = "https://github.com/BulmasArmpitSweat/suicide-rs.git"
homepage = "https://github.com/BulmasArmpitSweat/suicide-rs.git"
categories = ["os", "no-std"]
keywords = ["panic", "error", "errno"]
version = "1.0.0"
edition = "2024"
license = "MIT"

[dependencies]
errno = "0.3.11"
inline_colorization = "0.1.6"
tinyvec_string = { version = "0.3.2", features = ["alloc"] }
print-no-std = "0.2.1"
exit-no-std = "0.2.1"

[dev-dependencies]
linux-errnos = "0.4.0"
